@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "Nullblock",
 "advancements.overpowered.null_block.description": "Machen Sie einen Nullblock",
 
+"advancements.overpowered.gem_converter.title": "Edelsteinkonverter",
+"advancements.overpowered.gem_converter.description": "Stelle einen Edelsteinkonverter her",
+"advancements.overpowered.convert_a_thousand_gems.title": "Experte Konverter",
+"advancements.overpowered.convert_a_thousand_gems.description": "Wandle tausend Edelsteine um.",
+
 "advancements.overpowered.craft_laser.title": "Laser",
 "advancements.overpowered.craft_laser.description": "Stellen Sie eine Lasermaschine her.",
 "advancements.overpowered.fire_laser.title": "Laseraktivität",
