@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "Null Block",
 "advancements.overpowered.null_block.description": "Craft a Null Block.",
 
+"advancements.overpowered.gem_converter.title": "Gem Converter",
+"advancements.overpowered.gem_converter.description": "Craft a Gem Converter",
+"advancements.overpowered.convert_a_thousand_gems.title": "Master Converter",
+"advancements.overpowered.convert_a_thousand_gems.description": "Convert 1,000 Gems.",
+
 "advancements.overpowered.craft_laser.title": "Laser",
 "advancements.overpowered.craft_laser.description": "Craft a Laser Housing",
 "advancements.overpowered.fire_laser.title": "Fire Laser",
