@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "Bloc nul",
 "advancements.overpowered.null_block.description": "Faire un bloc nul",
 
+"advancements.overpowered.gem_converter.title": "Convertisseur de gemmes",
+"advancements.overpowered.gem_converter.description": "Fabriquer un convertisseur de gemmes",
+"advancements.overpowered.convert_a_thousand_gems.title": "Convertisseur maître",
+"advancements.overpowered.convert_a_thousand_gems.description": "Convertissez mille gemmes.",
+
 "advancements.overpowered.craft_laser.title": "Laser",
 "advancements.overpowered.craft_laser.description": "Fabriquez une machine laser.",
 "advancements.overpowered.fire_laser.title": "Activité laser",
