@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "Blok Null",
 "advancements.overpowered.null_block.description": "Buat Blok Null",
 
+"advancements.overpowered.gem_converter.title": "Penukar Permata",
+"advancements.overpowered.gem_converter.description": "Buat Penukar Permata",
+"advancements.overpowered.convert_a_thousand_gems.title": "Penukar Induk",
+"advancements.overpowered.convert_a_thousand_gems.description": "Tukarkan seribu permata.",
+
 "advancements.overpowered.craft_laser.title": "Laser",
 "advancements.overpowered.craft_laser.description": "Membuat mesin laser.",
 "advancements.overpowered.fire_laser.title": "Aktiviti laser",
