@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "blok zerowy",
 "advancements.overpowered.null_block.description": "Zrób blok zerowy",
 
+"advancements.overpowered.gem_converter.title": "konwerter klejnotów",
+"advancements.overpowered.gem_converter.description": "Stwórz konwerter klejnotów",
+"advancements.overpowered.convert_a_thousand_gems.title": "konwerter ekspertów",
+"advancements.overpowered.convert_a_thousand_gems.description": "Zamień tysiąc klejnotów.",
+
 "advancements.overpowered.craft_laser.title": "Laser",
 "advancements.overpowered.craft_laser.description": "Stwórz maszynę laserową.",
 "advancements.overpowered.fire_laser.title": "Aktywność lasera",
