@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "Null Block",
 "advancements.overpowered.null_block.description": "Gör ett nollblock",
 
+"advancements.overpowered.gem_converter.title": "pärla omvandlare",
+"advancements.overpowered.gem_converter.description": "Skapa en pärlakonverterare",
+"advancements.overpowered.convert_a_thousand_gems.title": "master konverterare",
+"advancements.overpowered.convert_a_thousand_gems.description": "Konvertera tusen ädelstenar.",
+
 "advancements.overpowered.craft_laser.title": "Laser",
 "advancements.overpowered.craft_laser.description": "Skapa en lasermaskin.",
 "advancements.overpowered.fire_laser.title": "Laseraktivitet",
