@@ -274,6 +274,11 @@
 "advancements.overpowered.null_block.title": "空塊",
 "advancements.overpowered.null_block.description": "製作一個空塊",
 
+"advancements.overpowered.gem_converter.title": "寶石轉換器",
+"advancements.overpowered.gem_converter.description": "製作寶石轉換器",
+"advancements.overpowered.convert_a_thousand_gems.title": "專家轉換器",
+"advancements.overpowered.convert_a_thousand_gems.description": "轉換一千個寶石",
+
 "advancements.overpowered.craft_laser.title": "激光",
 "advancements.overpowered.craft_laser.description": "製作激光機。",
 "advancements.overpowered.fire_laser.title": "激光火",
