@@ -1,0 +1,20 @@
+{
+  "display": {
+    "icon": {
+      "item": "overpowered:ruby"
+    },
+    "title": {
+      "translate": "advancements.overpowered.convert_a_thousand_gems.title"
+    },
+    "description": {
+      "translate": "advancements.overpowered.convert_a_thousand_gems.description"
+    },
+    "frame": "challenge"
+  },
+  "parent": "overpowered:overpowered/gem_converter",
+  "criteria": {
+    "convert_gems": {
+      "trigger": "minecraft:impossible"
+    }
+  }
+}
